prepare env prod.

--- a/.env.prod
+++ b/.env.prod
@@ -2,15 +2,14 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:I5MFMk7z6uYSpO0BADd16T0utXBMAqSY3+b3bnTy114=
 APP_DEBUG=false
-APP_URL=http://10.0.1.56:8133
-
+APP_URL=http://10.0.1.56:9047
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=10.0.1.163
-DB_DATABASE=db_inspeksi_kso
-DB_USERNAME=kso_usr
-DB_PASSWORD=Wp823*yH9f
+DB_DATABASE=tkdn_db
+DB_USERNAME=tkdn_usr
+DB_PASSWORD=b49Hn6t9YM4Z
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
