change env prod

--- a/.env.prod
+++ b/.env.prod
@@ -7,7 +7,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=10.0.1.163
-DB_DATABASE=tkdn_db
+DB_DATABASE=db_tkdn
 DB_USERNAME=tkdn_usr
 DB_PASSWORD=b49Hn6t9YM4Z
 
