--- a/code/composer.json
+++ b/code/composer.json
@@ -26,6 +26,7 @@
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.6",
         "vinkla/hashids": "*",
+        "webklex/laravel-pdfmerger": "^1.3",
         "yajra/laravel-datatables-oracle": "*"
     },
     "require-dev": {
