--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="BKI - TKDN"
 APP_ENV=production
 APP_KEY=base64:I5MFMk7z6uYSpO0BADd16T0utXBMAqSY3+b3bnTy114=
 APP_DEBUG=false
@@ -43,4 +43,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-API_BKI="https://auth.bki.co.id/v1/login"
+SIINAS_BASE_URL="http://api.kemenperin.go.id"
