change tls smtp

--- a/code/.env.example
+++ b/code/.env.example
@@ -28,7 +28,7 @@ MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
 MAIL_USERNAME="bki-noreply@bki.co.id"
 MAIL_PASSWORD="@noreply"
-MAIL_ENCRYPTION=starttls
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="bki-noreply@bki.co.id"
 MAIL_FROM_NAME="BKI No-Reply"
 
