--- a/.env.staging
+++ b/.env.staging
@@ -23,12 +23,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.office365.com
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME="bki-noreply@bki.co.id"
-MAIL_PASSWORD="@noreply"
-MAIL_ENCRYPTION=starttls
-MAIL_FROM_ADDRESS="bki-noreply@bki.co.id"
+MAIL_USERNAME="puntangwine@gmail.com"
+MAIL_PASSWORD="vkjbsjbtxfklmktr"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="puntangwine@gmail.com"
 MAIL_FROM_NAME="BKI No-Reply"
 
 AWS_ACCESS_KEY_ID=
