--- a/.env.staging
+++ b/.env.staging
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME="puntangwine@gmail.com"
-MAIL_PASSWORD="vkjbsjbtxfklmktr"
+MAIL_USERNAME="tkdnbki1964@gmail.com"
+MAIL_PASSWORD="yvwlismpxhnyweuw"
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="puntangwine@gmail.com"
+MAIL_FROM_ADDRESS="tkdnbki1964@gmail.com"
 MAIL_FROM_NAME="BKI No-Reply"
 
 AWS_ACCESS_KEY_ID=
