--- a/code/composer.json
+++ b/code/composer.json
@@ -22,10 +22,10 @@
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^3.0",
+        "rezaamini-ir/migrator": "1.5.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.6",
-        "symfony/css-selector": "4.4.0",
         "vinkla/hashids": "*",
         "webklex/laravel-pdfmerger": "^1.3",
         "yajra/laravel-datatables-oracle": "*"
