--- a/.env.staging
+++ b/.env.staging
@@ -2,7 +2,7 @@ APP_NAME="BKI - TKDN"
 APP_ENV=dev
 APP_KEY=base64:I5MFMk7z6uYSpO0BADd16T0utXBMAqSY3+b3bnTy114=
 APP_DEBUG=true
-APP_URL=http://10.0.6.35:5415
+APP_URL=https://dev-tkdn.bki.co.id
 
 LOG_CHANNEL=stack
 
