--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 APP_NAME="BKI - TKDN"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:I5MFMk7z6uYSpO0BADd16T0utXBMAqSY3+b3bnTy114=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://10.0.1.56:9047
 LOG_CHANNEL=stack
 
