--- a/.env.staging
+++ b/.env.staging
@@ -8,9 +8,9 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=tkdnbkidb
-DB_DATABASE=tkdn_db
-DB_USERNAME=root
-DB_PASSWORD=P@ssw0rd
+DB_DATABASE=db_tkdn
+DB_USERNAME=tkdn_usr
+DB_PASSWORD=b49Hn6t9YM4Z
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
