--- a/.env.staging
+++ b/.env.staging
@@ -27,7 +27,7 @@ MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
 MAIL_USERNAME="bki-noreply@bki.co.id"
 MAIL_PASSWORD="F7a>YdTB730^+[l5wkYT2le;"
-MAIL_ENCRYPTION=starttls
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="bki-noreply@bki.co.id"
 MAIL_FROM_NAME="BKI No-Reply"
 
