update env email

--- a/.env.prod
+++ b/.env.prod
@@ -22,12 +22,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
-MAIL_USERNAME="tkdnbki1964@gmail.com"
-MAIL_PASSWORD="yvwlismpxhnyweuw"
+MAIL_USERNAME="bki-noreply@bki.co.id"
+MAIL_PASSWORD="F7a>YdTB730^+[l5wkYT2le;"
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="tkdnbki1964@gmail.com"
+MAIL_FROM_ADDRESS="bki-noreply@bki.co.id"
 MAIL_FROM_NAME="BKI No-Reply"
 
 AWS_ACCESS_KEY_ID=
