--- a/.env.prod
+++ b/.env.prod
@@ -43,4 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+RECAPTCHA_SITE_KEY=6Lcr-RMpAAAAAFdvv9dw4fBiQx6IcoJj8XQvt2-h
+RECAPTCHA_SECRET_KEY=6Lcr-RMpAAAAAI_pnQ-skUhCNblF_VDmQ3YBUMil
+RECAPTCHA_SKIP_IP=
+
 SIINAS_BASE_URL="http://api.kemenperin.go.id"
